Fix #9779: add support for window.menuBarVisibility (#9830)

--- a/packages/core/src/browser/style/index.css
+++ b/packages/core/src/browser/style/index.css
@@ -78,6 +78,10 @@ blockquote {
     background: var(--theia-editor-background);
 }
 
+.theia-visible-menu-maximized {
+  top: var(--theia-private-menubar-height) !important;
+}
+
 .theia-ApplicationShell {
   position: absolute;
   top: 0;
